--- a/loopstudios-landing-page-main/style.css
+++ b/loopstudios-landing-page-main/style.css
@@ -69,7 +69,7 @@ h3 {
 }
 
 header {
-    background: #0006 url(../images/desktop/image-hero.jpg) no-repeat center;
+    background: #0006 url(images/desktop/image-hero.jpg) no-repeat center;
     background-size: cover;
     background-blend-mode: multiply;
     padding: 65px var(--px);
